<resources>
    <string name="app_name">MediaMetrics</string>

    <string name="main_activity_update_stop">Обновление остановлено</string>

    <string name="title_activity_activity__add_channel">Add channel</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="main_button_add">+</string>

    <string name="addChannel_buttonAddChannel">enter</string>
    <string name="activity_channelAdd_infoUrl">Введите url адрес канала:</string>
    <string name="activity_channelAdd_infoTitle">Введите название канала:</string>
    <string name="activity_channelAdd_enterUrl">www.example.ru/rss</string>
    <string name="activity_channelAdd_enterTitle">Не обязательное поле</string>

    <string name="serviceUpdate_resultOK">Обновленно</string>
    <string name="serviceUpdate_resultFail">Ошибка обновления</string>

    <string name="itemView_buttonUrl">Источник</string>
    <string name="itemView_buttonFavourite">Alarm</string>
    <string name="itemView_openUrl_ErrorUrl">Сайт не доступен</string>
    <string name="itemView_openUrl_ErrorBrowser">Ошибка браузера</string>

    <string name="serviceParsURL_infoAdd">Канал добавлен</string>
    <string name="serviceParsURL_resultFail">Ошибка добавления</string>
    <string name="serviceParsURL_UrlFail">Введите url адрес</string>
    <string name="serviceParsURL_UrlIncorrect">Некорректный url адрес</string>
    <string name="title_activity_channel_preferences">ChannelPreferences</string>
    <string name="title_activity_activity_preferences">ActivityPreferences</string>

    <string name="dialog_channel_settings_title_add">Новый канал</string>
    <string name="dialog_channel_settings_title_create">Редактор канала</string>

    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="change">Применить</string>

    <string name="navigation_menu_theme">Тема</string>
    <string name="navigation_menu_period_update">Период обновления</string>
    <string name="navigation_menu_wifi_check">Тема</string>

    <string name="navigation_menu_group_channel">Канал</string>
    <string name="navigation_menu_group_channel_add">Управление каналами</string>

    <string name="navigation_menu_group_setting">Настройки</string>
    <string name="navigation_menu_group_setting_theme">Тема</string>
    <string name="navigation_menu_group_setting_language">Язык</string>

    <string name="navigation_menu_group_internet">Интернет</string>
    <string name="navigation_menu_group_internet_period">Период обновления</string>
    <string name="navigation_menu_group_internet_wifi">Использовать только Wi-Fi</string>

    <string name="navigation_menu_group_program">Программа</string>
    <string name="navigation_menu_group_program_about">О прогрмме</string>

</resources>
